--- a/Javascriptproject-menu/Weather_app/index.html
+++ b/Javascriptproject-menu/Weather_app/index.html
@@ -59,31 +59,31 @@
           <a class="nav-link active" aria-current="page" href="https://fikrinotes.netlify.app">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Physics_menu.html">Fisika</a>
+          <a class="nav-link active" href="../../Physics_menu.html">Fisika</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Math-menu.html">Matematika</a>
+          <a class="nav-link active" href="../../Math-menu.html">Matematika</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="computerscience.html">Computer Science</a>
+          <a class="nav-link active" href="../../computerscience.html">Computer Science</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="https://fikrinotes.netlify.app/Javascriptproject-menu/">Javascript Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="HearingMusic.html">Hear Music</a>
+          <a class="nav-link active" href="../../HearingMusic.html">Hear Music</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Get_help.html">Help!</a>
+          <a class="nav-link active" href="../../Get_help.html">Help!</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="My_album.html">My Album</a>
+          <a class="nav-link active" href="../../My_album.html">My Album</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Contact-me.html">Contact Me</a>
+          <a class="nav-link active" href="../../Contact-me.html">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="TermOfUse.html">Terms of Use</a>
+          <a class="nav-link active" href="../../TermOfUse.html">Terms of Use</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -132,19 +132,19 @@
     <div class="tabel">
       <table border="0">
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="index.html">Halaman Utama</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Contact-me.html">Kontak</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../index.html">Halaman Utama</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../Contact-me.html">Kontak</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="Javascriptproject-menu.html">Javascript Project</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="TermOfUse.html">Terms Of Use</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../index.html">Javascript Project</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../TermOfUse.html">Terms Of Use</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="Physics_menu.html">Blog Fisika</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Math_menu.html">Blog Matematika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Blog Fisika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../Math_menu.html">Blog Matematika</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="computerscience.html">Blog computer science</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Blog computer science</a></td>
         </tr>
       </table>
     </div>
