--- a/Javascriptproject-menu/CaesarCipher/index.html
+++ b/Javascriptproject-menu/CaesarCipher/index.html
@@ -36,7 +36,7 @@
           </button>
         </div>
         <div align="justify" class="modal-body">
-          <b>Perhatian</b> <br /> Program yang anda lihat sekarang berfungsi untuk meng-enkripsi pesan anda. tulis pesan yang ingin anda enkripsi pada bagian plain text, dan isi nilai pergeserannya pada bagian "kunci enkripsi" . untuk keterangan lebih lanjut, anda bisa membacanya <a href="EnkripsiCaesar.html">disini</a>
+          <b>Perhatian</b> <br /> Program yang anda lihat sekarang berfungsi untuk meng-enkripsi pesan anda. tulis pesan yang ingin anda enkripsi pada bagian plain text, dan isi nilai pergeserannya pada bagian "kunci enkripsi" . untuk keterangan lebih lanjut, anda bisa membacanya <a href="../../EnkripsiCaesar.html">disini</a>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
