--- a/Javascriptproject-menu/CaesarCipher/index.html
+++ b/Javascriptproject-menu/CaesarCipher/index.html
@@ -50,9 +50,9 @@
   </div>
   <nav aria-label="breadcrumb" id="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-      <li class="breadcrumb-item"><a href="Javascriptproject-menu.html"> Javascript Project</a></li>
-      <li class="breadcrumb-item"><a href="Math_solver.html">Caesar Cipher</a></li>
+      <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+      <li class="breadcrumb-item"><a href="../index.html"> Javascript Project</a></li>
+      <li class="breadcrumb-item"><a href="index.html">Caesar Cipher</a></li>
     </ol>
   </nav>
   <div class="kartu">
