--- a/Javascriptproject-menu/Boring_math/index.html
+++ b/Javascriptproject-menu/Boring_math/index.html
@@ -104,9 +104,9 @@
             Quick link
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="ChatBot.html">ChatBot</a> </li>
-            <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
-            <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a>
+            <li><a class="dropdown-item" href="../ChatBot.html">ChatBot</a> </li>
+            <li><a class="dropdown-item" href="../Donkeygame.html">Donkey.js Game</a> </li>
+            <li></li><a class="dropdown-item" href="../Calculator.html">Calculator</a>
         </li>
         <li><a class="dropdown-item" href="../CaesarCipher/index.html">Caesar Cipher</a></li>
         <li><a class="dropdown-item" href="../BMI_calculator/index.html">BMI Calculator</a></li>
@@ -216,15 +216,15 @@
         <td class="link"><a class="text-decoration-none text-reset" href="../../Contact-me.html">Kontak</a></td>
       </tr>
       <tr>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../Javascriptproject-menu.html">Javascript Project</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../index.html">Javascript Project</a></td>
         <td class="link"><a class="text-decoration-none text-reset" href="../../TermOfUse.html">Terms Of Use</a></td>
       </tr>
       <tr>
         <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Blog Fisika</a></td>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../Math_menu.html">Blog Matematika</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Math-menu.html">Blog Matematika</a></td>
       </tr>
       <tr>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Blog computer science</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Blog Computer Science</a></td>
       </tr>
     </table>
   </div>
