--- a/Javascriptproject-menu/index.html
+++ b/Javascriptproject-menu/index.html
@@ -67,6 +67,7 @@
     </tr>
     <tr>
       <th><a href="Boring_math/index.html">- Boring Math</a></th>
+      <th><a href="IntergalacticWar/index.html">- Intergalactic War Game</a></th>
     </tr>
   </table>
 </div>
