--- a/Javascriptproject-menu/IntergalacticWar/index.html
+++ b/Javascriptproject-menu/IntergalacticWar/index.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-T9QDCNTY1F');
 </script>
-<link rel="icon" href="fikrinotes.netlify.app/logo_fix.png" height=250px>
+<link rel="icon" href="../../logo_fix.png" height=250px>
 <meta name="theme-color" content="#04194f"/>
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
   <meta charset="UTF-8">
@@ -170,7 +170,7 @@
       </tr>
       <tr>
         <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Physics Blog</a></td>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../Math_menu.html">Mathematics Blog</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Math-menu.html">Mathematics Blog</a></td>
       </tr>
       <tr>
         <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Computer Science Blog</a></td>
