--- a/Javascriptproject-menu/Boring_math/index.html
+++ b/Javascriptproject-menu/Boring_math/index.html
@@ -70,7 +70,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="../../Physics_menu.html">Physics</a>
@@ -97,7 +97,7 @@
           <a class="nav-link active" href="../../Contact-me.html">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="../TermOfUse.html">Terms of Use</a>
+          <a class="nav-link active" href="../../TermOfUse.html">Terms of Use</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -212,19 +212,19 @@
   <div class="tabel">
     <table border="0">
       <tr>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../index.html">Halaman Utama</a></td>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../Contact-me.html">Kontak</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../index.html">Homepage</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Contact-me.html">Contact Me</a></td>
       </tr>
       <tr>
         <td class="link"><a class="text-decoration-none text-reset" href="../index.html">Javascript Project</a></td>
         <td class="link"><a class="text-decoration-none text-reset" href="../../TermOfUse.html">Terms Of Use</a></td>
       </tr>
       <tr>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Blog Fisika</a></td>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../Math-menu.html">Blog Matematika</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Physics Blog</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../Math-menu.html">Math Blog</a></td>
       </tr>
       <tr>
-        <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Blog Computer Science</a></td>
+        <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Computer Science Blog</a></td>
       </tr>
     </table>
   </div>
