--- a/Javascriptproject-menu/Math_solver/index.html
+++ b/Javascriptproject-menu/Math_solver/index.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-T9QDCNTY1F');
 </script>
-  <link rel="icon" href="logo_fix.png" height=250px>
+  <link rel="icon" href="../../logo_fix.png" height=250px>
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -52,9 +52,9 @@
 </div>
 <nav aria-label="breadcrumb" id="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="Javascriptproject-menu.html">My Javascript Project</a></li>
-    <li class="breadcrumb-item"><a href="Math_solver.html">Math Solver</a></li>
+    <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
+    <li class="breadcrumb-item"><a href="../index.html">My Javascript Project</a></li>
+    <li class="breadcrumb-item"><a href="index.html">Math Solver</a></li>
   </ol>
 </nav>  
 <p align="justify">Pembelajaran matematika seringkali terasa melelahkan. sebenarnya mudah, namun karena terlalu banyak kalkulasi yang harus dilakukan, otak kita menjadi lelah. Nah, karena itu saya merancang program ini untuk menyelesaikan permasalahan matematika sederhana, yaitu persamaan linear 2 variabel dan 3 variabel. Program ini mengambil input berupa 2 buah persamaan linear 2 variabel atau 3 buah persamaan 3 variabel. output nya adalah nilai dari x dan y (dan z) yang hendak kita cari.</p>
