--- a/Javascriptproject-menu/ChatBot/index.html
+++ b/Javascriptproject-menu/ChatBot/index.html
@@ -12,7 +12,7 @@
 
       gtag('config', 'G-T9QDCNTY1F');
     </script>
-    <link rel="icon" href="logo_fix.png" height=250px>
+    <link rel="icon" href="../../logo_fix.png" height=250px>
     <meta name="theme-color" content="#2432D3"/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
