--- a/Javascriptproject-menu/Numbers_fact/index.html
+++ b/Javascriptproject-menu/Numbers_fact/index.html
@@ -13,7 +13,7 @@
 
     gtag('config', 'G-T9QDCNTY1F');
   </script>
-  <link rel="icon" href="logo_fix.png" height=250px>
+  <link rel="icon" href="../../logo_fix.png" height=250px>
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -48,7 +48,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <div class="logo"><img src="fikri_notes.png" alt="logo" width="60" />
+        <div class="logo"><img src="../../fikri_notes.png" alt="logo" width="60" />
           <div class="webpage">FIKRI NOTES</div>
         </div>
       </a>
@@ -58,34 +58,34 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Physics_menu.html">Fisika</a>
+            <a class="nav-link active" href="../../Physics_menu.html">Fisika</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Math-menu.html">Matematika</a>
+            <a class="nav-link active" href="../../Math-menu.html">Matematika</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="computerscience.html">Computer Science</a>
+            <a class="nav-link active" href="../../computerscience.html">Computer Science</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Javascriptproject-menu.html">Javascript Project</a>
+            <a class="nav-link active" href="../index.html">Javascript Project</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="HearingMusic.html">Hear Music</a>
+            <a class="nav-link active" href="../../HearingMusic.html">Hear Music</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Get_help.html">Help!</a>
+            <a class="nav-link active" href="../../Get_help.html">Help!</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="My_album.html">My Album</a>
+            <a class="nav-link active" href="../../My_album.html">My Album</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="Contact-me.html">Contact Me</a>
+            <a class="nav-link active" href="../../Contact-me.html">Contact Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="TermOfUse.html">Terms of Use</a>
+            <a class="nav-link active" href="../../TermOfUse.html">Terms of Use</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -96,11 +96,11 @@
               <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
               <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a>
           </li>
-          <li><a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a></li>
-          <li><a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a></li>
-          <li><a class="dropdown-item" href="Math_solver.html">Math Solver</a></li>
-          <li><a class="dropdown-item" href="Stopwatch.html">Stopwatch</a></li>
-          <li><a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a></li>
+          <li><a class="dropdown-item" href="../CaesarCipher/index.html">Caesar Cipher</a></li>
+          <li><a class="dropdown-item" href="../BMI_calculator/index.html">BMI Calculator</a></li>
+          <li><a class="dropdown-item" href="../Math_solver/index.html">Math Solver</a></li>
+          <li><a class="dropdown-item" href="../Stopwatch/index.html">Stopwatch</a></li>
+          <li><a class="dropdown-item" href="../Guess_number_game/index.html">Guess-Number Game</a></li>
           <li><a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a></li>
         </ul>
         </li>
@@ -167,19 +167,19 @@
     <div class="tabel">
       <table border="0">
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="index.html">Halaman Utama</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Contact-me.html">Kontak</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../index.html">Halaman Utama</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../Contact-me.html">Kontak</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="Javascriptproject-menu.html">Javascript Project</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="TermOfUse.html">Terms Of Use</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../index.html">Javascript Project</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../TermOfUse.html">Terms Of Use</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="Physics_menu.html">Blog Fisika</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Math_menu.html">Blog Matematika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../Physics_menu.html">Blog Fisika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../Math_menu.html">Blog Matematika</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="computerscience.html">Blog computer science</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="../../computerscience.html">Blog computer science</a></td>
         </tr>
       </table>
     </div>
