--- a/Javascriptproject-menu/index.html
+++ b/Javascriptproject-menu/index.html
@@ -34,7 +34,7 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="fikrinotes.netlify.app">Home</a></li>
-    <li class="breadcrumb-item"><a href="Javascriptproject-menu/index.html">My Javascript Project</a></li>
+    <li class="breadcrumb-item"><a href="index.html">My Javascript Project</a></li>
   </ol>
 </nav> 
 <div class="kartu">
