--- a/Javascriptproject-menu/Idealize/index.html
+++ b/Javascriptproject-menu/Idealize/index.html
@@ -10,6 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Charmonman:wght@700&display=swap" rel="stylesheet">
  <title>Idealize | An App For Healthy Purpose - Fikri Notes</title>
+<link rel="icon" href="../../logo_fix.png" height=250px>
 <meta name="title" content="Idealize | An App For Healthy Purpose - Fikri Notes">
 <meta name="description" content="Kamu merasa berat badanmu ideal? yakin? coba cek apakah tubuhmu ideal, disini.">
 
