--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <a class="nav-link active" href="computerscience.html">Computer Science</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Javascriptproject-menu.html">Javascript Project</a>
+          <a class="nav-link active" href="/Javascriptproject-menu/index.html">Javascript Project</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="HearingMusic.html">Hear Music</a>
@@ -146,15 +146,15 @@
             Quick link
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="Weather_app.html">Weather App</a> </li>
-            <li><a class="dropdown-item" href="ChatBot.html">ChatBot</a> </li>
-            <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
-            <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a></li>
-            <li><a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a></li>
-            <li><a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a></li>
-            <li><a class="dropdown-item" href="Math_solver.html">Math Solver</a></li>
-            <li><a class="dropdown-item" href="Stopwatch.html">Stopwatch</a></li>
-            <li><a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a></li>
+            <li><a class="dropdown-item" href="/Javascript-menu/Weather_app/index.html">Weather App</a> </li>
+            <li><a class="dropdown-item" href="/Javascript-menu/ChatBot/index.html">ChatBot</a> </li>
+            <li><a class="dropdown-item" href="/Javascript-menu/Donkeygame/index.html">Donkey.js Game</a> </li>
+            <li></li><a class="dropdown-item" href="/Javascript-menu/Calculator/index.html">Calculator</a></li>
+            <li><a class="dropdown-item" href="/Javascript-menu/CaesarCipher/index.html">Caesar Cipher</a></li>
+            <li><a class="dropdown-item" href="/Javascript-menu/BMI_calculator/.html">BMI Calculator</a></li>
+            <li><a class="dropdown-item" href="/Javascript-menu/Math_solver/index.html">Math Solver</a></li>
+            <li><a class="dropdown-item" href="/Javascript-menu/Stopwatch/index.html">Stopwatch</a></li>
+            <li><a class="dropdown-item" href="/Javascript-menu/Guess_number_game/index.html">Guess-Number Game</a></li>
             <li><a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a></li>
   
           </ul>
@@ -258,7 +258,7 @@
         <div class="card-body">
           <h5 class="card-title">Boring Math</h5>
           <p class="card-text" align="justify">boring math adalah layanan untuk menyelesaikan persoalan matematika secara otomatis.Layanan merupakan pengembangan dari math solver. </p>
-          <a href="Boring_math.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/Boring_math/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -268,7 +268,7 @@
         <div class="card-body">
           <h5 class="card-title">Number's Fact</h5>
           <p class="card-text" align="justify">Anda suka matematika? anda tertarik dengan angka angka?tunggu apa lagi, langsung klik tombol di bawah dan baca petunjuk penggunaan website ini. </p>
-          <a href="Numbers_fact.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/Numbers_fact/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -278,7 +278,7 @@
         <div class="card-body">
           <h5 class="card-title">Weather Web App</h5>
           <p class="card-text" align="justify">Project ini adalah project pertama saya yang menggunakan API. Web App ini berfungsi untuk mengetahui keadaan cuaca dan info penting lainnya dari seluruh dunia.</p>
-          <a href="Weather_app.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/Weather_app/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -288,7 +288,7 @@
         <div class="card-body">
           <h5 class="card-title">Help!</h5>
           <p class="card-text" align="justify">Halaman web ini merupakan kontribusi kami di bidang pendidikan. halaman ini berfungsi untuk tempat bertanya tentang materi-materi sekolah </p>
-          <a href="Get_help.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/Get_help/.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -298,7 +298,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:F - ChatBot</h5>
           <p class="card-text" align="justify">F-Chatbot adalah sebuah program untuk menjawab pertanyaan pertanyaan anda dengan bantuan dari wolfram alpha dan google search.</p>
-          <a href="ChatBot.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/ChatBot/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -308,7 +308,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Donkey.js Game</h5>
           <p class="card-text" align="justify">Game arcade sederhana. dalam permainan ini,kamu harus terus berkendara sambil menghindari keledai yang akan menghalangi jalanmu</p>
-          <a href="Donkeygame.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/Donkeygame/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -318,7 +318,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Caesar Cipher</h5>
           <p class="card-text" align="justify">Program ini berfungsi untuk meng-enkripsi pesan dengan metode enkripsi caesar, metode yang pernah saya bahas pada blog sebelumnya </p>
-          <a href="CaesarCipher.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -328,7 +328,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Calculator</h5>
           <p class="card-text" align="justify">kalkulator sederhana ,namun dengan style yang berkelas. Kalkulator ini dapat melakukan berbagai operasi matematika sederhana. </p>
-          <a href="Calculator.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascript-menu/Calculator/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
