--- a/index.html
+++ b/index.html
@@ -254,11 +254,31 @@
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="background.png" class="card-img-top" alt="Boring Math image">
+        <div class="card-body">
+          <h5 class="card-title">Idealize</h5>
+          <p class="card-text" align="justify">menghitung BMI itu cukup rumit, dan juga memakan waktu. karena itu WebApp jni hadir untuk melakukan penghitungan BMI ini secara instan. </p>
+          <a href="/Javascriptproject-menu/Idealize/index.html" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="intergalacticwar.png" class="card-img-top" alt="Intergalactic War Image">
+        <div class="card-body">
+          <h5 class="card-title">Intergalactic War </h5>
+          <p class="card-text" align="justify">Intergalactic war is a game with the concept of war between humans and extraterrestrials. This game tells the fate of humans if extraterrestrials really exist...</p>
+          <a href="/https://fikrinotes.netlify.app/javascriptproject-menu/intergalacticwar/" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="bgboringmath.jpg" class="card-img-top" alt="Boring Math image">
         <div class="card-body">
           <h5 class="card-title">Boring Math</h5>
           <p class="card-text" align="justify">boring math adalah layanan untuk menyelesaikan persoalan matematika secara otomatis.Layanan merupakan pengembangan dari math solver. </p>
-          <a href="/Javascript-menu/Boring_math/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/Boring_math/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -268,7 +288,7 @@
         <div class="card-body">
           <h5 class="card-title">Number's Fact</h5>
           <p class="card-text" align="justify">Anda suka matematika? anda tertarik dengan angka angka?tunggu apa lagi, langsung klik tombol di bawah dan baca petunjuk penggunaan website ini. </p>
-          <a href="/Javascript-menu/Numbers_fact/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/Numbers_fact/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -278,7 +298,7 @@
         <div class="card-body">
           <h5 class="card-title">Weather Web App</h5>
           <p class="card-text" align="justify">Project ini adalah project pertama saya yang menggunakan API. Web App ini berfungsi untuk mengetahui keadaan cuaca dan info penting lainnya dari seluruh dunia.</p>
-          <a href="/Javascript-menu/Weather_app/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/Weather_app/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -288,7 +308,7 @@
         <div class="card-body">
           <h5 class="card-title">Help!</h5>
           <p class="card-text" align="justify">Halaman web ini merupakan kontribusi kami di bidang pendidikan. halaman ini berfungsi untuk tempat bertanya tentang materi-materi sekolah </p>
-          <a href="/Javascript-menu/Get_help/.html" class="btn btn-primary">Lihat</a>
+          <a href="Get_help.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -298,7 +318,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:F - ChatBot</h5>
           <p class="card-text" align="justify">F-Chatbot adalah sebuah program untuk menjawab pertanyaan pertanyaan anda dengan bantuan dari wolfram alpha dan google search.</p>
-          <a href="/Javascript-menu/ChatBot/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/ChatBot/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -308,7 +328,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Donkey.js Game</h5>
           <p class="card-text" align="justify">Game arcade sederhana. dalam permainan ini,kamu harus terus berkendara sambil menghindari keledai yang akan menghalangi jalanmu</p>
-          <a href="/Javascript-menu/Donkeygame/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/Donkeygame/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -318,7 +338,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Caesar Cipher</h5>
           <p class="card-text" align="justify">Program ini berfungsi untuk meng-enkripsi pesan dengan metode enkripsi caesar, metode yang pernah saya bahas pada blog sebelumnya </p>
-          <a href="/Javascript-menu/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -328,7 +348,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Calculator</h5>
           <p class="card-text" align="justify">kalkulator sederhana ,namun dengan style yang berkelas. Kalkulator ini dapat melakukan berbagai operasi matematika sederhana. </p>
-          <a href="/Javascript-menu/Calculator/index.html" class="btn btn-primary">Lihat</a>
+          <a href="/Javascriptproject-menu/Calculator/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -338,7 +358,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Math Solver</h5>
           <p align="justify" class="card-text">Ini adalah program yang cukup mengagumkan. Program ini dapat menyelesaikan persamaan linear 2 variabel dan 3 variabel. Baca petunjuk sebelum digunakan.</p>
-          <a href="Math_solver.html" class="btn btn-primary">lihat</a>
+          <a href="/Javascriptproject-menu/Math_solver/index.html" class="btn btn-primary">lihat</a>
         </div>
       </div>
     </div>
@@ -348,7 +368,7 @@
         <div class="card-body">
           <h5 class="card-title">Blog:Teknik Enkripsi Caesar </h5>
           <p align="justify" class="card-text">Caesar Cipher merupakan salah satu teknik enkripsi yang paling sederhana. teknik ini menggeser huruf huruf yang ingin dienkripsi dengan pergeseran tertentu </p>
-          <a href="EnkripsiCaesar.html" class="btn btn-primary">lihat</a>
+          <a href="/Javascriptproject-menu/EnkripsiCaesar/index.html" class="btn btn-primary">lihat</a>
         </div>
       </div>
     </div>
@@ -358,7 +378,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:Game Tebak Angka</h5>
           <p class="card-text">Game ini madalah game menebak angka. Program komputer telah memilih angka secara acak, dan tugas anda adalah menebak angka pilihan tersebut.</p>
-          <a href="Guess_number_game.html" class="btn btn-primary">lihat</a>
+          <a href="/Javascriptproject-menu/Guess_number_game/index.html" class="btn btn-primary">lihat</a>
         </div>
       </div>
     </div>
