--- a/Javascriptproject-menu/index.html
+++ b/Javascriptproject-menu/index.html
@@ -69,6 +69,9 @@
       <th><a href="Boring_math/index.html">- Boring Math</a></th>
       <th><a href="IntergalacticWar/index.html">- Intergalactic War Game</a></th>
     </tr>
+    <tr>
+      <th><a href="https://fikrinotes.netlify.app/javascriptproject-menu/idealize/">- Idealize</a></th>
+    </tr>
   </table>
 </div>
 </body>
