--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
 <meta property="twitter:description" content="Math, science and technology.  all you can see here.  let's dive into science">
 <meta property="twitter:image" content="https://fikrinotes.netlify.app/metaTag.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Coda&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styleindex.css">
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
   <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-  <script src="https://unpkg.com/scrollreveal"></script>   
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">   
 </head>
 <style>
   body {
@@ -70,31 +68,6 @@
 
   #keterangan {
     font-family: 'Gruppo', cursive;
-  }
-
-  #loading {
-    width: 100px;
-    height: 100px;
-    border: solid 5px #ccc;
-    border-radius: 100%;
-    border-top-color: red;
-    animation: putar 1s linear infinite;
-    position: fixed;
-    right: 0;
-    left: 0;
-    top: 0;
-    bottom: 0;
-    margin: auto;
-  }
-
-  @keyframes putar {
-    from {
-      transform: rotate(0deg)
-    }
-
-    to {
-      transform: rotate(360deg)
-    }
   }
 </style>
 
@@ -138,9 +111,6 @@
         <li class="nav-item">
           <a class="nav-link active" href="TermOfUse.html">Terms of Use</a>
         </li>
-        <div width="auto" background-color="black">
-            <script async src="https://cse.google.com/cse.js?cx=d35b9e14fb3d25e66"></script>
-            <div class="gcse-search"></div>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Quick link
@@ -213,6 +183,7 @@
 
 <div class="background-timeline">
   <p class="programmingJourney">My Programming Journey</p>
+<center>
   <section class="timeline">
     <div class="time">
       <h4>September 2018</h4>
@@ -247,6 +218,7 @@
       <p class="pe">Saya mulai menuliskan Blog pada website saya dan terus meng-upgrade style CSS nya. Dan akhir-akhir kni saya menempatkan semua project javascript saya, seperti program Kriptografi sederhana, game, dan kalkulator, sembari terus belajar tentang bahasa pemrograman Python.</p>
     </div>
   </section>
+</center>
 </div>  
 
 
@@ -268,7 +240,7 @@
         <div class="card-body">
           <h5 class="card-title">Intergalactic War </h5>
           <p class="card-text" align="justify">Intergalactic war is a game with the concept of war between humans and extraterrestrials. This game tells the fate of humans if extraterrestrials really exist...</p>
-          <a href="/https://fikrinotes.netlify.app/javascriptproject-menu/intergalacticwar/" class="btn btn-primary">Lihat</a>
+          <a href="/javascriptproject-menu/IntergalacticWar/index.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
@@ -416,14 +388,6 @@
   </div>
   
   </script>
-   <script type="text/javascript" charset="utf-8">
-     ScrollReveal().reveal('.time');
-  </script>
-  <script type="text/javascript" charset="utf-8">
-    var loading = document.getElementById('loading');
-    window.addEventListener('load', function() { loading.style.display = "none" });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
 
