--- a/index.html
+++ b/index.html
@@ -136,50 +136,34 @@
   
   
 
-  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active car1">
-        <div class="overlay-image" style="background-image: url(./slide-1.jpg);"></div>
-        <div class="cover" >
-          <h5>Fisika</h5>
-          <a href="Physics_menu.html" class="text-decoration-none text-reset" >Lihatlah betapa teraturnya dunia disini</a><br />
-          <a type="button" class="btn btn-primary btn-lg carbtn" href="Physics_menu.html">Lihat</a> 
-        </div>
+      <div class="carousel-item active">
+        <img src="slide-1.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <div class="overlay-image" style="background-image: url(./slide-2.jpg);"></div>
-        <div class="cover">
-          <h5>Matematika</h5>
-          <a href="Math-menu.html" class="text-decoration-none text-reset">Jendela untuk memahami keteraturan dunia</a> <br />
-          <a type="button" class="btn btn-primary btn-lg carbtn" href="Math-menu.html">Lihat</a> 
-        </div>
+        <img src="slide-2.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item ">
-        <div class="overlay-image" style="background-image: url(./slide-3.jpg);"></div>
-        <div class="cover">
-          <h5>Computer Science</h5>
-          <a href="computerscience.html" class="text-decoration-none text-reset">Apa saja yang dapat dilakukan komputer?</a><br />
-          <a type="button" class="btn btn-primary btn-lg carbtn" href="computerscience.html">Lihat</a>
-        </div>
+      <div class="carousel-item">
+        <img src="slide-3.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
   
   
-
 
 <div class="background-timeline">
   <p class="programmingJourney">My Programming Journey</p>
