--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <meta property="twitter:image" content="https://fikrinotes.netlify.app/metaTag.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Coda&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="styleindex.css">
+  <link rel="stylesheet" type="text/css" href="index.css">
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
