--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="slide-1.jpg" class="d-block w-100" alt="...">
+        <img src="slide.jpg" class="d-block w-100" alt="slide CS">
       </div>
       <div class="carousel-item">
-        <img src="slide-2.jpg" class="d-block w-100" alt="...">
+        <img src="slide-2.jpg" class="d-block w-100" alt="slide physics">
       </div>
       <div class="carousel-item">
-        <img src="slide-3.jpg" class="d-block w-100" alt="...">
+        <img src="slide-3.jpg" class="d-block w-100" alt="slide math">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
